Prevented team names from wrapping on games select

--- a/css/games.css
+++ b/css/games.css
@@ -303,6 +303,7 @@ h1 {
 .team-name {
 	font-weight: bold;
 	text-shadow: 0 0 10px #000;
+	white-space: nowrap;
 }
 
 .team-name-text {
